--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                     <li>
                       <a href="instalacoes/foodtruck.html">Serviços para Foodtrucks</a>
                     </li>
+                    <li>
+                      <a href="instalacoes/termografia.html">Termografia</a>
+                    </li>
                   </ul>
 
                   <li class="menu-has-children">
