--- a/instalacoes/spda.html
+++ b/instalacoes/spda.html
@@ -3,21 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ENETEC - Para-raios</title>
+  <title>ENETEC - Consultoria</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <meta content="para-raios, eletrônicos, proteção" name="keywords">
-  <meta content="" name="description">
+  <meta content="luz, conforto, economia,lâmpadas" name="keywords">
+  <meta content="Quer ter maior conforto visual e ainda diminuir a conta de luz? Nós fazemos estudos luminotécnicos para você!"
+    name="description">
 
   <!-- Favicons -->
   <link href="../img/favicon.png" rel="icon">
   <link href="../img/apple-touch-icon.png" rel="apple-touch-icon">
 
+  <link href="../css/forms.css" rel="stylesheet">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../css/forms.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
   <link href="../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -73,13 +74,19 @@
                   <a style="pointer-events: none; cursor: pointer;">Instalações</a>
                   <ul>
                     <li>
-                      <a href="../instalacoes/instala.html">Projetos</a>
+                      <a href="instala.html">Projetos</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                      <a href="spda.html">Sistemas de proteção a Descarga atmosférica</a>
                     </li>
                     <li>
-                      <a href="../instalacoes/normas.html">Adequação às normas</a>
+                      <a href="normas.html">Adequação às normas</a>
+                    </li>
+                    <li>
+                      <a href="foodtruck.html">Serviços para Foodtrucks</a>
+                    </li>
+                    <li>
+                      <a href="termografia.html">Termografia</a>
                     </li>
                   </ul>
 
