--- a/instalacoes/termografia.html
+++ b/instalacoes/termografia.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ENETEC - Consultoria em Instalações</title>
+  <title>ENETEC - Consultoria</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <meta content="disjuntor, instalações, problemas, energia, caindo," name="keywords">
-  <meta content="Disjuntor caindo? Problemas com falta de energia? Fale conosco!" name="description">
+  <meta content="luz, conforto, economia,lâmpadas" name="keywords">
+  <meta content="Quer ter maior conforto visual e ainda diminuir a conta de luz? Nós fazemos estudos luminotécnicos para você!"
+    name="description">
 
   <!-- Favicons -->
   <link href="../img/favicon.png" rel="icon">
   <link href="../img/apple-touch-icon.png" rel="apple-touch-icon">
-  <link href="../css/forms.css" rel="stylesheet">
 
+  <link href="../css/forms.css" rel="stylesheet">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
 
@@ -141,7 +142,7 @@
   <!--==========================
     Hero Section
     ============================-->
-  <section id="hero" style="background: url(../img/about-img3.jpg) top center fixed;">
+  <section id="hero" style="background: url(../img/termo.jpg) top center fixed;">
     <div class="icons">
       <a href="https://www.linkedin.com/company/enetec-consultoria/">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -154,8 +155,8 @@
       </a>
     </div>
     <div class="hero-container">
-      <h1> Instalações Elétricas</h1>
-      <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
+      <h1>Análise com Termografia</h1>
+      <h2>Tecnologia de ponta para proteger suas instalações</h2>
       <p>
         <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
       </p>
@@ -168,126 +169,122 @@
     <!--==========================
       About Us Section
       ============================-->
-    <section id="about" style="background: url(../img/ins.jpg) top center fixed">
+    <section id="about" style="background: url(../img/termo.jpg) top center fixed">
       <div class="container">
         <div class="row about-container">
           <center>
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title">Por que projetar as instalações de seu imóvel?</h2>
+              <h2 class="title"> O que é Termografia?</h2>
               <p>
-                Instalações mal-projetadas e/ou mal-cuidadas são causas de inúmeros problemas. Tais problemas incluem questôes materiais:
-                diminuição da vida útil dos eletrônicos, equipamentos queimados, ou até mesmo questões de segurança como
-                queimaduras e até mesmo a morte.
+                A Termografia é uma tecnologia que permite visualizar a assinatura de calor de objetos. Dessa maneira, podemos identificar pontos mais quentes.
               </p>
 
-              <div class=" wow fadeInUp">
-                <h4 class="title">
-                  <a href="">Como identificar os problemas?</a>
-                </h4>
-                <p class="description">
-                  Fios desencapados, instalações sem manutenção adequada ( o ideal é de 5 em 5 anos), a energia cai frequentemente.
 
-                </p>
-              </div>
 
-              <div class=" wow fadeInUp" data-wow-delay="0.2s">
-                <h4 class="title">
-                  <a href="">Segurança</a>
-                </h4>
-                <p class="description">Uma instalação elétrica bem projetada e executada retira o risco que você pode ter na sua empresa ou na sa
-                  residência. Os acidentes de origem elétrica aumentaram em todo o Brasil, segundo o anuário divulgado pela
-                  Abracopel – Associação Brasileira de Conscientização para os Perigos da Eletricidade. Foram 1.387 ocorrências
-                  registradas em 2017, sendo 702 fatais.
-                </p>
-              </div>
+              <h2 class="title"> Como usar em instalações elétricas?</h2>
+              <p>
+                Com a ajuda da termografia, podemos identificar pontos de superaquecimento causados por problemas no fluxo de corrente. É um procedimento rápido e totalmente não invasivo, ou seja, nada precisa ser removido ou desligado para realizar a análise.
+              </p>
 
-              <div class=" wow fadeInUp" data-wow-delay="0.4s">
-                <h4 class="title">
-                  <a href="">O que fazer?</a>
-                </h4>
-                <p class="description">
-                  Identificou algum problema?
-                  <a href="#contact">
-                    Fale conosco.
-                  </a>
-                  Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
-                </p>
-                <br>
-                <br>
-              </div>
-
+              <p class="description">
+                A ENETEC realiza seu projeto de instalações elétricas e emite laudos técnicos atestando sua segurança.
+                <a href="#contact">
+                  Entre em contato e faça um orçamento gratuito
+                </a>
+              </p>
+              <br>
+              <br>
             </div>
           </center>
         </div>
-
+        <section id="call-to-action" style="background: white">
+          <div class="container wow fadeIn">
+            <div class="row">
+              <div class="section-header">
+                <h3 class="section-title" style="color:black; position: relative; margin-bottom: 15px;">Como funciona a termografia</h3>
+              </div>
+              <div class="col-lg-7 text-center text-lg-left">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/K6CCCoEDiNw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </div>
+              <div class="col-lg-4 cta-btn-container text-center">
+                <p style="color:black; text-align: justify;">
+                  No vídeo ao lado você pode aprender um pouco mais sobre o funcionamento da termografia em instalações elétricas e suas vantagens.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </section>
     <!-- #about -->
-
     <!--==========================
       Services Section
       ============================-->
-    <section id="services" style="background: rgb(31,141,211)">
-      <div class="container wow fadeIn">
-        <div class="section-header">
-          <h3 class="section-title">O que podemos fazer por você</h3>
-          <p style="color:white" class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
-        </div>
+      <section id="services" style="background: rgb(31,141,211)">
+        <div class="container wow fadeIn">
+          <div class="section-header">
+            <h3 class="section-title">O que podemos fazer por você</h3>
+            <p style="color:white" class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          </div>
+  
+          <div class="card-group">
+            <div class="card icon-services">
+              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
+              <div class="card-body">
+                <h5 class="card-title">Energia Solar</h5>
+                <p class="card-text">Nosso país tem um dos maiores potenciais de captação solar do mundo. Com um projeto de fotovoltaica da ENETEC
+                  você será capaz de gerar energia e reduzir o valor da sua conta.</p>
+              </div>
+            </div>
+            <div class="card icon-services">
+              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-plug icon-services"></i>
+              <div class="card-body">
+                <h5 class="card-title">Instalações Elétricas</h5>
+                <p class="card-text">Fazemos a parte elétrica do seu projeto e emitimos laudos técnicos, o que garante sua segurança e evita prejuízos
+                  associados a instabilidade energética.
+                  <a href="">Fale conosco</a>
+                </p>
+              </div>
+            </div>
+            <div class="card icon-services">
+              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-line-chart icon-services"></i>
+              <div class="card-body">
+                <h5 class="card-title">Eficiência Energética</h5>
+                <p class="card-text">Desperdiçar energia é perder dinheiro e cerca de 10% da energia gerada no Brasil não é aproveitada. Na ENETEC
+                  analisamos sua conta de luz e seu plano tarifário, reduzindo o valor da sua conta.
+                </p>
+              </div>
+            </div>
+            <div class="card icon-services">
+              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-bolt icon-services"></i>
+              <div class="card-body">
+                <h5 class="card-title">Sistemas de Proteção a Descargas Atmosféricas</h5>
+                <p class="card-text">O Brasil registra uma média de 78 milhıes de raios por ano e muitas residências não estão seguras. Na ENETEC
+                  projetamos sistemas de para-raios que garantem a segurança de você e sua família.
+  
+  
+                </p>
+              </div>
+            </div>
+            <div class="card icon-services">
+              <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-fire icon-services"></i>
+              <div class="card-body">
+                <h5 class="card-title">Termografia</h5>
+                <p class="card-text">90% dos incêndios residenciais são causados por problemas nas instalações elétricas e poderiam ser prevenidos
+                  com um laudo termográfico. Utilizamos uma câmera que mede temperatura para identificar e analisar sobreaquecimento
+                  na estrutura do seu imóvel, evitando acidentes e garantindo a sua segurança.
+                </p>
+              </div>
+            </div>
+          </div>
+      </section>
+      <!-- #services -->
+  
 
-        <div class="card-group">
-          <div class="card icon-services">
-            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
-            <div class="card-body">
-              <h5 class="card-title">Energia Solar</h5>
-              <p class="card-text">Nosso país tem um dos maiores potenciais de captação solar do mundo. Com um projeto de fotovoltaica da ENETEC
-                você será capaz de gerar energia e reduzir o valor da sua conta.</p>
-            </div>
-          </div>
-          <div class="card icon-services">
-            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-plug icon-services"></i>
-            <div class="card-body">
-              <h5 class="card-title">Instalações Elétricas</h5>
-              <p class="card-text">Fazemos a parte elétrica do seu projeto e emitimos laudos técnicos, o que garante sua segurança e evita prejuízos
-                associados a instabilidade energética.
-                <a href="">Fale conosco</a>
-              </p>
-            </div>
-          </div>
-          <div class="card icon-services">
-            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-line-chart icon-services"></i>
-            <div class="card-body">
-              <h5 class="card-title">Eficiência Energética</h5>
-              <p class="card-text">Desperdiçar energia é perder dinheiro e cerca de 10% da energia gerada no Brasil não é aproveitada. Na ENETEC
-                analisamos sua conta de luz e seu plano tarifário, reduzindo o valor da sua conta.
-              </p>
-            </div>
-          </div>
-          <div class="card icon-services">
-            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-bolt icon-services"></i>
-            <div class="card-body">
-              <h5 class="card-title">Sistemas de Proteção a Descargas Atmosféricas</h5>
-              <p class="card-text">O Brasil registra uma média de 78 milhıes de raios por ano e muitas residências não estão seguras. Na ENETEC
-                projetamos sistemas de para-raios que garantem a segurança de você e sua família.
 
 
-              </p>
-            </div>
-          </div>
-          <div class="card icon-services">
-            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-fire icon-services"></i>
-            <div class="card-body">
-              <h5 class="card-title">Termografia</h5>
-              <p class="card-text">90% dos incêndios residenciais são causados por problemas nas instalações elétricas e poderiam ser prevenidos
-                com um laudo termográfico. Utilizamos uma câmera que mede temperatura para identificar e analisar sobreaquecimento
-                na estrutura do seu imóvel, evitando acidentes e garantindo a sua segurança.
-              </p>
-            </div>
-          </div>
-        </div>
-    </section>
-    <!-- #services -->
 
 
     <!--==========================
@@ -327,7 +324,7 @@
                   <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
                   <br>
                 </p>
-                <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                   <br> clicando aqui
                   <br>
                 </a>
