--- a/simulador/index.html
+++ b/simulador/index.html
@@ -84,6 +84,12 @@
                     <li>
                       <a href="../instalacoes/normas.html">Adequação às normas</a>
                     </li>
+                    <li>
+                      <a href="../instalacoes/foodtruck.html">Serviços para Foodtrucks</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/termografia.html">Termografia</a>
+                    </li>
                   </ul>
 
                   <li class="menu-has-children">
