--- a/eficiencia/analise.html
+++ b/eficiencia/analise.html
@@ -82,19 +82,25 @@
                     <li>
                       <a href="../instalacoes/normas.html">Adequação às normas</a>
                     </li>
+                    <li>
+                      <a href="../instalacoes/foodtruck.html">Serviços para Foodtrucks</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/termografia.html">Termografia</a>
+                    </li>
                   </ul>
 
                   <li class="menu-has-children">
                     <a style="pointer-events: none; cursor: pointer;">Eficiência</a>
                     <ul>
                       <li>
-                        <a href="../eficiencia/lumino.html">Luminotécnico</a>
+                        <a href="lumino.html">Luminotécnico</a>
                       </li>
                       <li>
-                        <a href="../eficiencia/analise.html">Análise de conta de luz</a>
+                        <a href="analise.html">Análise de conta de luz</a>
                       </li>
                       <li>
-                        <a href="../eficiencia/analise.html">Análise de qualidade de energia</a>
+                        <a href="analise.html">Análise de qualidade de energia</a>
                       </li>
                     </ul>
                   </li>
