--- a/eficiencia/quiz.html
+++ b/eficiencia/quiz.html
@@ -36,6 +36,8 @@
     License: https://bootstrapmade.com/license/
     ======================================================= -->
 
+    <!-- Global site tag (gtag.js) - Google Ads: 875379985 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-875379985"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-875379985'); </script> 
+<!-- Event snippet for E-Book conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. --> <script> function gtag_report_conversion(url) { var callback = function () { if (typeof(url) != 'undefined') { window.location = url; } }; gtag('event', 'conversion', { 'send_to': 'AW-875379985/nbZOCKfI94sBEJH6tKED', 'event_callback': callback }); return false; } </script> 
 </head>
 
 <body>
