--- a/instalacoes/foodtruck.html
+++ b/instalacoes/foodtruck.html
@@ -272,88 +272,89 @@
 
 
 
+     <!-- #about -->
     <!--==========================
       Contact Section
       ============================-->
-    <section id="contact">
-      <div class="container wow fadeInUp">
-        <div class="section-header">
-          <h3 class="section-title" style="color:black;">Contato</h3>
-          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
-            em 24h no máximo</p>
-        </div>
-      </div>
-
-
-      <div class="container wow fadeInUp">
-        <div class="row justify-content-center">
-
-          <div class="col-lg-3 col-md-4">
-
-            <div class="info">
-              <div>
-                <i class="fa fa-map-marker"></i>
-                <p>
-                  Brasília DF UnB SG-11 - AT 3/4
-                </p>
-              </div>
-
-              <div>
-                <i class="fa fa-envelope"></i>
-                <p>contato@enetec.unb.br</p>
-              </div>
-
-              <div>
-                <i class="fa fa-phone"></i>
-                <p>Telefone: (61) 3107-1036
-                  <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
-                  <br>
-                </p>
-                <a class="btn btn-primary" id="wwp-button"   href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
-                  <br> clicando aqui
-                  <br>
-                </a>
-              </div>
-            </div>
-
+      <section id="contact">
+        <div class="container wow">
+          <div class="section-header">
+            <h3 class="section-title" style="color:black;">Contato</h3>
+            <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
+              em 24h no máximo</p>
           </div>
-
-          <div class="col-lg-5 col-md-8">
-            <div class="form">
-              <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Ops, este e-mail é inválido"
-                  />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="phone" id="subject" placeholder="Telefone ou Celular" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!"
-                    placeholder="Digite aqui sua mensagem"></textarea>
-                  <div class="validation"></div>
-                </div>
-                <center>
-                  <button class="contact2-form-btn" style="background: #2dc997;">
-                    <span> Enviar </span>
-                    <input type="submit" hidden />
-                  </button>
-                </center>
-              </form>
-            </div>
-
-
-          </div>
-
         </div>
-    </section>
-    <!-- #contact -->
+  
+  
+        <div class="container wow">
+          <div class="row justify-content-center">
+  
+            <div class="col-lg-3 col-md-4">
+  
+              <div class="info">
+                <div>
+                  <i class="fa fa-map-marker"></i>
+                  <p>
+                    Brasília DF UnB SG-11 - AT 3/4
+                  </p>
+                </div>
+  
+                <div>
+                  <i class="fa fa-envelope"></i>
+                  <p>contato@enetec.unb.br</p>
+                </div>
+  
+                <div>
+                  <i class="fa fa-phone"></i>
+                  <p>Telefone: (61) 3107-1036
+                    <br> Diretora Comercial (Carol) (61) 9 9295-1628
+                    <br>
+                  </p>
+                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561998620404&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                    <br> clicando aqui
+                    <br>
+                  </a>
+                </div>
+              </div>
+  
+            </div>
+  
+            <div class="col-lg-5 col-md-8">
+              <div class="form">
+                <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
+                  <div class="form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Ops, este e-mail é inválido"
+                    />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="phone" id="subject" placeholder="Telefone ou Celular" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!"
+                      placeholder="Digite aqui sua mensagem"></textarea>
+                    <div class="validation"></div>
+                  </div>
+                  <center>
+                    <button class="contact2-form-btn" style="background: #2dc997;">
+                      <span> Enviar </span>
+                      <input type="submit" hidden />
+                    </button>
+                  </center>
+                </form>
+              </div>
+  
+  
+            </div>
+  
+          </div>
+      </section>
+      <!-- #contact -->
 
   </main>
 
