--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@
               <div>
                 <i class="fa fa-phone"></i>
                 <p>Telefone: (61) 3107-1036
-                  <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
+                  <br> Diretora Comercial (Carol) (61) 9 9295-1628
                   <br>
                 </p>
-                <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561998620404&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                   <br> clicando aqui
                   <br>
                 </a>
