--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
           <div class="col-lg-5 col-md-8">
             <div class="form">
-              <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
+              <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                   <div class="validation"></div>
