--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta property="og:image" content="http://enetec.unb.br/img/hero-bg.jpg">
-  <title>ENETEC - Quem Somos</title>
+  <title>ENETEC - Quem somos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta content="energia, sustentável, economia, solar, sistema, projeto,fotovoltaico, investimento" name="keywords">
   <meta content="Quer saber quanto economizaria com um sistema de energia solar? Simule aqui!" name="description">
