--- a/instalacoes/spda.html
+++ b/instalacoes/spda.html
@@ -320,7 +320,7 @@
                     <br> Diretora Comercial (Carol) (61) 9 9295-1628
                     <br>
                   </p>
-                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561998620404&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561986095281&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                     <br> clicando aqui
                     <br>
                   </a>
@@ -331,7 +331,7 @@
   
             <div class="col-lg-5 col-md-8">
               <div class="form">
-                <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
+                <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                     <div class="validation"></div>
