--- a/about/index.html
+++ b/about/index.html
@@ -114,6 +114,9 @@
                 <li>
                   <a href="../landing/index3.html">Como proteger suas instalações elétricas</a>
                 </li>
+                <li>
+                  <a href="landing5/index.html">Como Termografia pode te ajudar a proteger suas instalações</a>
+                </li>
               </ul>
             </li>
             <li>
