--- a/simulador/index.html
+++ b/simulador/index.html
@@ -120,6 +120,9 @@
                 <li>
                   <a href="../landing/index3.html">Como proteger suas intalações elétricas</a>
                 </li>
+                <li>
+                  <a href="landing5/index.html">Como Termografia pode te ajudar a proteger suas instalações</a>
+                </li>
               </ul>
             </li>
             <li>
