--- a/instalacoes/normas.html
+++ b/instalacoes/normas.html
@@ -267,7 +267,7 @@
     <!-- #services -->
 
 
-     <!-- #about -->
+        <!-- #about -->
     <!--==========================
       Contact Section
       ============================-->
@@ -302,10 +302,10 @@
                 <div>
                   <i class="fa fa-phone"></i>
                   <p>Telefone: (61) 3107-1036
-                    <br> Diretora Comercial (Carol) (61) 9 9295-1628
+                    <br> Diretor Comercial (Igor Lima) (61) 9 9699-5651
                     <br>
                   </p>
-                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561986095281&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <a class="btn btn-primary" id="wwp-button" href="https://api.whatsapp.com/send?phone=5561996450664&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
                     <br> clicando aqui
                     <br>
                   </a>
@@ -316,7 +316,7 @@
   
             <div class="col-lg-5 col-md-8">
               <div class="form">
-                <form action="https://formspree.io/pedro.oliveira@enetec.unb.br" method="post" class="contactForm">
+                <form action="https://formspree.io/luiz.fidalgo@enetec.unb.br" method="post" class="contactForm">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                     <div class="validation"></div>
@@ -350,8 +350,8 @@
           </div>
       </section>
       <!-- #contact -->
-
-  </main>
+  
+    </main>
 
 
 
